<resources>
    <string name="app_name">Marcador de Jogos</string>
    <string name="title_points">Pontos</string>
    <string name="title_score">Placar</string>
    <string name="good_game">Bom jogo!!</string>
    <string name="text_choice_game">"Escolha o jogo: "</string>
    <string name="hint_player">Jogador</string>
    <string name="description_button_add">Adicionar jogador</string>
    <string name="description_list_players">Lista de jogadores</string>
    <string name="start_game">Começar!</string>
    <string name="bisca">Bisca</string>
    <string name="text_round">Rodada </string>
    <string name="text_status_game">subindo</string>
    <string name="calculate">Calcular</string>
    <string name="overall_score">Placar Geral</string>
    <string name="truco">Truco</string>
    <string name="text_we">NOIS</string>
    <string name="text_them">ELES</string>
    <string name="tranca_buraco">Tranca/Buraco</string>
    <string name="hint_points">Pontos</string>
    <string name="total">total</string>
    <string name="cacheta">Cacheta</string>
    <string name="played">jogou?</string>
    <string name="winner">Ganhou!</string>
    <string name="points">10</string>
    <string name="hint_doing">Faz</string>
    <string name="hint_done">Fez</string>
    <string name="title_historical">Historico</string>
    <string name="text_null_matches">Você ainda não jogou uma partida!!</string>
    <string name="plus_one">+1</string>
    <string name="plus_three">+3</string>
    <string name="reset">Resetar</string>
    <string name="reset_dialog_title">Reiniciar partida</string>
    <string name="reset_dialog_message">Tem certeza que deseja zerar o placar?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string-array name="list_games">
        <item></item>
        <item>Bisca</item>
        <item>Cacheta</item>
        <item>Tranca/Buraco</item>
        <item>Truco</item>
    </string-array>
</resources>