<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_doing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:padding="10dp"
        android:text="@string/hint_doing"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_done"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:padding="10dp"
        android:text="@string/hint_done"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:padding="10dp"
        android:text="@string/total"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>