<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="horizontal"
    android:background="@drawable/container_points"
    >

    <TextView
        android:id="@+id/textPlayer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:gravity="center|left"
        android:text="@string/hint_player" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout2"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_doing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:hint="@string/hint_doing"
            android:singleLine="true"
            android:inputType="number"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_done"
            android:singleLine="true"
            android:inputType="number"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/points"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>