<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".start.StartActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_game"
        android:textSize="36sp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_choice_game"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner_game"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <Spinner
        android:id="@+id/spinner_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/list_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_game"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_input_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_game">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_player"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_add_player"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/description_button_add"
        app:layout_constraintBottom_toBottomOf="@+id/edit_input_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_input_player"
        app:layout_constraintTop_toTopOf="@+id/edit_input_player" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/description_list_players"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_input_player" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/start_game"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_players"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>