<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.truco.TrucoActivity">

    <TextView
        android:id="@+id/text_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/truco"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_we"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_we"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/text_them"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_game" />

    <TextView
        android:id="@+id/text_them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_them"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_we"
        app:layout_constraintTop_toBottomOf="@+id/text_game" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_we"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/control_bar"
        app:layout_constraintEnd_toStartOf="@+id/recyclerview_them"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_we" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_them"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/control_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recyclerview_we"
        app:layout_constraintTop_toBottomOf="@+id/text_them" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_plus1_we"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:text="@string/plus_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus3_we"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_plus3_we"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:text="@string/plus_three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_reset"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_of="@+id/btn_plus1_we"
            app:layout_constraintStart_toEndOf="@+id/btn_plus1_we"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/md_theme_outline"
            android:padding="0dp"
            android:text="@string/reset"
            android:textColor="@color/md_theme_onError"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus1_them"
            app:layout_constraintHorizontal_weight="1.4"
            app:layout_constraintStart_toEndOf="@+id/btn_plus3_we"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_plus1_them"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/md_theme_error"
            android:padding="0dp"
            android:text="@string/plus_one"
            android:textColor="@color/md_theme_onError"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus3_them"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btn_reset"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_plus3_them"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/md_theme_error"
            android:padding="0dp"
            android:text="@string/plus_three"
            android:textColor="@color/md_theme_onError"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btn_plus1_them"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
